--- a/Website/index.html
+++ b/Website/index.html
@@ -4,7 +4,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Comila HTML CSS Template</title>
+	<title>Cluster and Cloud Computing</title>
 <!--
 Comila Template
 http://www.templatemo.com/tm-490-comila
@@ -23,13 +23,16 @@ http://www.templatemo.com/tm-490-comila
 
   	<link rel="stylesheet" href="css/vegas.min.css">
 	<link rel="stylesheet" href="css/style.css">
-
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Rajdhani:400,500,700' rel='stylesheet' type='text/css'>
 
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.css' rel='stylesheet' />
 </head>
 <body>
 
 <!-- preloader section -->
+
 <section class="preloader">
 	<div class="sk-circle">
        <div class="sk-circle1 sk-child"></div>
@@ -54,10 +57,16 @@ http://www.templatemo.com/tm-490-comila
 
 			<div class="col-md-offset-2 col-md-8 col-sm-12">
 				<div class="home-thumb">
-					<h1 class="wow fadeInUp" data-wow-delay="0.4s">Hello, we are comila</h1>
-          			<h3 class="wow fadeInUp" data-wow-delay="0.6s">We are almost <strong>ready to launch</strong> our <strong>new creative</strong> website!</h3>
-          			<a href="#about" class="btn btn-lg btn-default smoothScroll wow fadeInUp hidden-xs" data-wow-delay="0.8s">Let's begin</a>
+					<h1 class="wow fadeInUp" data-wow-delay="0.4s">Hello, we are <strong>Cloud Nine</strong></h1>
+          			<h3 class="wow fadeInUp" data-wow-delay="0.6s">Welcome to our <strong> Data Insights </strong> website!</h3>
+          			<!--
+					<a href="#about" class="btn btn-lg btn-default smoothScroll wow fadeInUp hidden-xs" data-wow-delay="0.8s">Let's begin</a>
         			<a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-lg btn-success smoothScroll wow fadeInUp" data-wow-delay="1.0s">Notify me!</a>
+					 <input class="roundButton roundB3" onClick="document.getElementById('about').scrollIntoView();" />	
+					-->
+					<button href="#about" class="roundButton roundB3" onClick="document.getElementById('about').scrollIntoView();"></button>
+					<button href="#feature" class="roundButton roundB1" onClick="document.getElementById('feature').scrollIntoView();"></button>
+					<button href="#contact" class="roundButton roundB2" onClick="document.getElementById('contact').scrollIntoView();""></button>
 				</div>
 			</div>
 
@@ -71,18 +80,16 @@ http://www.templatemo.com/tm-490-comila
 		<div class="row">
 
       <div class="col-md-6 col-sm-12">
-        <img src="images/about-img.png" class="img-responsive wow fadeInUp" alt="About">
+        <img src="images/aboutpage.png" class="img-responsive wow fadeInUp" alt="About">
       </div>
 
 			<div class="col-md-6 col-sm-12">
 				<div class="about-thumb">
 					<div class="section-title">
-						<h1 class="wow fadeIn" data-wow-delay="0.2s">our company</h1>
-						<h3 class="wow fadeInUp" data-wow-delay="0.4s">Comila Studio is based in Hong Kong</h3>
-					</div>
-					<div class="wow fadeInUp" data-wow-delay="0.6s">
-						<p>Vivamus elit risus, porttitor id placerat ut, aliquet non quam. Pellentesque nulla metus, ornare et porttitor vel, consectetur vitae erat. Vestibulum tristique semper tellus vitae condimentum. Duis sed eros eget diam dictum posuere.</p>
-						<p>Aliquam vel gravida ligula. Phasellus ut purus ac libero ultrices commodo commodo at quam. In vestibulum purus sit amet tempus euismod. Donec sed congue nisl.</p>
+						<h1 class="wow fadeIn" data-wow-delay="0.2s">our team</h1>
+						<h4 class="wow fadeInUp" data-wow-delay="0.4s">University of Melbourne</h4>
+						<h4 class="wow fadeInUp" data-wow-delay="0.4s">Cluster and Cloud Computing</h4>
+						<h4 class="wow fadeInUp" data-wow-delay="0.4s">Group 42:  Zijian  *  Ivan  *  Hannah  *  Lan  *  Duer</h4>
 					</div>
 				</div>
 			</div>
@@ -102,43 +109,67 @@ http://www.templatemo.com/tm-490-comila
       </svg>
 
       <div class="col-md-4 col-sm-6">
-        <div class="media wow fadeInUp" data-wow-delay="0.4s">
+        <div class="media wow fadeInUp" data-wow-delay="0.3s">
           <div class="media-object media-left">
-            <i class="icon icon-laptop"></i>
+            <i class="icon icon-cloud"></i>
           </div>
           <div class="media-body">
-            <h2 class="media-heading">Responsive</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque luctus lacus nulla, eget varius justo tristique ut.</p>
+            <h2 class="media-heading">Data Sources</h2>
+            <h5><b>The data was collected from Twitter posts in Australia.</b></h5>
           </div>
         </div>
       </div>
 
       <div class="col-md-4 col-sm-6">
-        <div class="media wow fadeInUp" data-wow-delay="0.8s">
+        <div class="media wow fadeInUp" data-wow-delay="0.3s">
           <div class="media-object media-left">
             <i class="icon icon-refresh"></i>
           </div>
           <div class="media-body">
-            <h2 class="media-heading">Bootstrap</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque luctus lacus nulla, eget varius justo tristique ut.</p>
+            <h2 class="media-heading">Analytic Topic</h2>
+            <h5><b>Food and How it affects the Mood.</h5></b>
           </div>
         </div>
       </div>
 
       <div class="col-md-4 col-sm-8">
-        <div class="media wow fadeInUp" data-wow-delay="1.2s">
+        <div class="media wow fadeInUp" data-wow-delay="0.3s">
           <div class="media-object media-left">
-            <i class="icon icon-chat"></i>
+            <!--<i class="icon icon-bar-chart"></i>-->
+			<i class="fa fa-bar-chart" style="font-size:40px;color:white;"></i>
           </div>
           <div class="media-body">
-            <h2 class="media-heading">Support</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque luctus lacus nulla, eget varius justo tristique ut.</p>
+            <h2 class="media-heading">Insight Graphs</h2>
+				<div>
+					<label><b>Select a City:</label></b>
+						<!-- drop-down list-->
+						<select class="default" id="citylist" name="citylist">
+						  <option value="melbourne">Melbourne</option>
+						  <option value="sydney">Sydney</option>
+						  <option value="canberra">Canberra</option>
+						  <option value="perth">Perth</option>
+						  <option value="adelaide">Adelaide</option>
+						</select>
+				</div>
+				<!-- drop-down list end-->
+				<h5><b>-- OR --</h5></b>
+				<div>
+					<label><b>Select a State:</label></b>
+					<!-- drop-down list-->
+					<select class="default" id="statelist" name="statelist">
+						<option value="vic">VIC</option>
+						<option value="nsw">NSW</option>
+						<option value="act">ACT</option>
+						<option value="wa">WA</option>
+						<option value="sa">SA</option>
+					</select>
+				</div>
           </div>
         </div>
       </div>
 
       <div class="clearfix text-center col-md-12 col-sm-12">
-        <a href="#contact" class="btn btn-default smoothScroll">Talk to us</a>
+        <a href="#contact" class="btn btn-default smoothScroll">View Graphs</a>
       </div>
 
     </div>
@@ -152,88 +183,44 @@ http://www.templatemo.com/tm-490-comila
 
 			<div class="col-md-offset-2 col-md-8 col-sm-12">
 				<div class="section-title">
-					<h1 class="wow fadeInUp" data-wow-delay="0.3s">Get in touch</h1>
-					<p class="wow fadeInUp" data-wow-delay="0.6s">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
+					<h6 class="wow fadeInUp" data-wow-delay="0.3s">View Insights on <strong>Map</strong></h6>
+					<p class="wow fadeInUp" data-wow-delay="0.6s">nonsense text here</p>
 				</div>
-				<div class="contact-form wow fadeInUp" data-wow-delay="1.0s">
-					<form id="contact-form" method="post" action="#">
-                        <div class="col-md-6 col-sm-6">
-                          	<input name="name" type="text" class="form-control" placeholder="Your Name" required>
-                        </div>
-                        <div class="col-md-6 col-sm-6">
-                          	<input name="email" type="email" class="form-control" placeholder="Your Email" required>
-                        </div>
-           			  	<div class="col-md-12 col-sm-12">
-				   			<textarea name="message" class="form-control" placeholder="Message" rows="6" required></textarea>
-           			  	</div>
-						<div class="col-md-offset-3 col-md-6 col-sm-offset-2 col-sm-8">
-							<input name="submit" type="submit" class="form-control submit" id="submit" value="SEND MESSAGE">
-						</div>
-					</form>
+				<div>
+					<div>
+						<label><b>Select a City:</label></b>
+						<!-- drop-down list-->
+						<select class="default" id="citylist" name="citylist">
+						  <option value="melbourne">Melbourne</option>
+						  <option value="sydney">Sydney</option>
+						  <option value="canberra">Canberra</option>
+						  <option value="perth">Perth</option>
+						  <option value="adelaide">Adelaide</option>
+						</select>
+					</div>
+
+					<!-- drop-down list end-->
+					<h5><b>-- OR --</h5></b>
+					<div>
+						<label><b>Select a State:</label></b>
+						<!-- drop-down list-->
+						<select class="default" id="statelist" name="statelist">
+						  <option value="vic">VIC</option>
+						  <option value="nsw">NSW</option>
+						  <option value="act">ACT</option>
+						  <option value="wa">WA</option>
+						  <option value="sa">SA</option>
+						</select>
+					</div>
+					<div id='map'></div>
+					<div class="clearfix text-center col-md-12 col-sm-12">
+						<button class="btn2 btn-default smoothScroll">View Map</button>
+					</div>
 				</div>
 			</div>
-	
 		</div>
 	</div>
 </section>
-
-<!-- footer section -->
-<footer>
-	<div class="container">
-		<div class="row">
-
-      <svg class="svgcolor-light" preserveAspectRatio="none" viewBox="0 0 100 102" height="100" width="100%" version="1.1" xmlns="http://www.w3.org/2000/svg">
-        <path d="M0 0 L50 100 L100 0 Z"></path>
-      </svg>
-
-      <div class="col-md-4 col-sm-6">
-        <h2>comila</h2>
-          <div class="wow fadeInUp" data-wow-delay="0.3s">
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque luctus lacus nulla, eget varius justo tristique ut. Etiam a tellus magna.</p>
-             <p class="copyright-text">Copyright &copy; 2016 Your Company <br>
-             Designed by <a rel="nofollow" href="http://www.google.com/+templatemo" target="_parent">Templatemo</a></p>
-          </div>
-      </div>
-
-      <div class="col-md-1 col-sm-1"></div>
-
-      <div class="col-md-4 col-sm-5">
-        <h2>Our Studio</h2>
-        <p class="wow fadeInUp" data-wow-delay="0.6s">
-          120-240 aliquam augue libero,<br>
-          Convallis in vulputate 10220 <br>
-          San Francisco, CA, USA
-        </p>
-        <ul class="social-icon">
-          <li><a href="#" class="fa fa-facebook wow bounceIn" data-wow-delay="0.9s"></a></li>
-          <li><a href="#" class="fa fa-twitter wow bounceIn" data-wow-delay="1.2s"></a></li>
-          <li><a href="#" class="fa fa-behance wow bounceIn" data-wow-delay="1.4s"></a></li>
-          <li><a href="#" class="fa fa-dribbble wow bounceIn" data-wow-delay="1.6s"></a></li>
-        </ul>
-      </div>
-
-		</div>
-	</div>
-</footer>
-
-<!-- modal -->
-<div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-      <div class="modal-content modal-popup">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h2 class="modal-title">Our Newsletter</h2>
-        </div>
-        <form action="#" method="post">
-          <input name="fullname" type="text" class="form-control" id="fullname" placeholder="Full Name">
-          <input name="email" type="text" class="form-control" id="email" placeholder="Email Address">
-          <input name="submit" type="submit" class="form-control" id="submit" value="Subscribe Now">
-        </form>
-        <p>Thank you for your visiting!</p>
-      </div>
-  </div>
-</div>
-
 
 <!-- Back top -->
 <a href="#back-top" class="go-top"><i class="fa fa-angle-up"></i></a>
@@ -247,6 +234,14 @@ http://www.templatemo.com/tm-490-comila
 <script src="js/wow.min.js"></script>
 <script src="js/smoothscroll.js"></script>
 <script src="js/custom.js"></script>
-
+<script>
+	mapboxgl.accessToken = 'pk.eyJ1IjoiaGFubmFobmdvYyIsImEiOiJjamc3Z2ZldDUwMjc4Mndwam9wZWNqZG5rIn0.Qj8OvcCuEytwM9tAXakxpQ';
+	var map = new mapboxgl.Map({
+		container: 'map', // container id
+		style: 'mapbox://styles/mapbox/streets-v9', // stylesheet location
+		center: [133.775136, -28.274398], // starting position [lng, lat]
+		zoom: 2 // starting zoom
+	});
+</script>
 </body>
 </html>
