--- a/Website/index.html
+++ b/Website/index.html
@@ -214,7 +214,7 @@ http://www.templatemo.com/tm-490-comila
 					</div>
 					<div id='map'></div>
 					<div class="clearfix text-center col-md-12 col-sm-12">
-						<button class="btn2 btn-default smoothScroll">View Map</button>
+						<button  href="map.html" class="btn2 btn-default smoothScroll" onclick="window.location.href='map.html'";>View Map</button>
 					</div>
 				</div>
 			</div>
