--- a/Website/pullData2.html
+++ b/Website/pullData2.html
@@ -18,7 +18,7 @@
 		}
 	});
 	*/
-	var data = "python -X GET "+url;
+	var data = "curl -X GET "+url;
 	$.ajax({
 		headers:  {
 			"Access-Control-Allow-Origin" : "*", // Required for CORS support to work
