--- a/Website/index.html
+++ b/Website/index.html
@@ -162,7 +162,9 @@
       </div>
 
       <div class="clearfix text-center col-md-12 col-sm-12">
-        <a href="#contact" class="btn btn-default smoothScroll">View Graphs</a>
+        <a href="/html/pieChart.html" class="btn btn-default smoothScroll">Pie Chart</a>
+		<a href="/html/barChart.html" class="btn btn-default smoothScroll">Bar Chart</a>
+		<a href="/html/graph.html" class="btn btn-default smoothScroll">Graph</a>
       </div>
 
     </div>
@@ -178,9 +180,9 @@
 				<div class="section-title">
 					<h6 class="wow fadeInUp" data-wow-delay="0.3s">View Insights on <strong>Map</strong></h6>
 					<br><br>
-					<b><a href="mapFood.html" style="font-size: 25px; text-decoration: none">Food Consumption in Australian Cities</a></b><br><br>
-					<b><a href="mapSentiment.html" style="font-size: 25px; text-decoration: none">Sentiment Analytics in Australian Cities</a></b><br><br>
-					<b><a href="mapHomeless.html" style="font-size: 25px; text-decoration: none">Homeless in Australian Cities</a></b><br><br>
+					<b><a href="/html/mapFood.html" style="font-size: 25px; text-decoration: none">Food Consumption in Australian Cities</a></b><br><br>
+					<b><a href="/html/mapSentiment.html" style="font-size: 25px; text-decoration: none">Sentiment Analytics in Australian Cities</a></b><br><br>
+					<b><a href="/html/mapHomeless.html" style="font-size: 25px; text-decoration: none">Homeless in Australian Cities</a></b><br><br>
 				</div>
 					<!--
 					<div class="clearfix text-center col-md-12">
