--- a/Website/index.html
+++ b/Website/index.html
@@ -162,8 +162,10 @@
       </div>
 
       <div class="clearfix text-center col-md-12 col-sm-12">
+	  <!--
         <a href="/html/pieChart.html" class="btn btn-default smoothScroll">Pie Chart</a>
 		<a href="/html/barChart.html" class="btn btn-default smoothScroll">Bar Chart</a>
+		-->
 		<a href="/html/graph.html" class="btn btn-default smoothScroll">Graph</a>
       </div>
 
@@ -180,9 +182,9 @@
 				<div class="section-title">
 					<h6 class="wow fadeInUp" data-wow-delay="0.3s">View Insights on <strong>Map</strong></h6>
 					<br><br>
-					<b><a href="/html/mapFood.html" style="font-size: 25px; text-decoration: none">Food Consumption in Australian Cities</a></b><br><br>
-					<b><a href="/html/mapSentiment.html" style="font-size: 25px; text-decoration: none">Sentiment Analytics in Australian Cities</a></b><br><br>
-					<b><a href="/html/mapHomeless.html" style="font-size: 25px; text-decoration: none">Homeless in Australian Cities</a></b><br><br>
+					<b><a href="/html/mapFood.html" style="font-size: 25px; text-decoration: none">Food Consumption in Australia</a></b><br><br>
+					<b><a href="/html/mapHomelessBySuburb.html" style="font-size: 25px; text-decoration: none">Homeless in Australia by Suburbs</a></b><br><br>
+					<b><a href="/html/mapHomelessAndFoods.html" style="font-size: 25px; text-decoration: none">Homeless and Food Consumption in Australia</a></b><br><br>
 				</div>
 					<!--
 					<div class="clearfix text-center col-md-12">
